panel padding and gap fixes

--- a/frontend/src/assets/theme/styleoverrides.scss
+++ b/frontend/src/assets/theme/styleoverrides.scss
@@ -31,6 +31,12 @@
       }
    }
 
+   div.p-datatable {
+      .p-datatable-header-cell, td {
+         padding: 0.5rem;
+      }
+   }
+
    .p-carousel-item-list .p-carousel-item {
       display: flex;
       flex-flow: row nowrap;
